fix vertical alignment with LinkButtons

--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -1,7 +1,9 @@
 @import '../../Styles/foundation';
 
 .btn {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   padding: $spacing-2 $spacing-3;
   position: relative;
